--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "imagekit": "^6.0.0",
     "mongoose": "^8.10.1",
     "next": "15.1.7",
