--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "imagekit": "^6.0.0",
     "mongoose": "^8.10.1",
     "next": "15.1.7",
