--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.8",
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.1",
     "dotenv": "^16.4.7",
     "imagekit": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "next": "15.1.7",
     "react": "^19.0.0",
