--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^8.10.1",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
