--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/jsonwebtoken": "^9.0.8",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.1",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
