--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.15.1",
+    "react-quill-new": "^3.4.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
