--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -1,13 +1,13 @@
 - name: Penghijauan
   uses: stefanzweifel/git-auto-commit-action@v5.1.0
-    with:
+  with:
     # Optional. Commit message for the created commit.
     # Defaults to "Apply automatic changes"
     commit_message: Siram Tanaman
 
     # Optional. Local and remote branch name where commit is going to be pushed
-    #  to. Defaults to the current branch.
-    #  You might need to set `create_branch: true` if the branch does not exist.
+    # Defaults to the current branch.
+    # You might need to set `create_branch: true` if the branch does not exist.
     branch: feature-123
 
     # Optional. Options used by `git-commit`.
@@ -16,9 +16,6 @@
 
     # Optional glob pattern of files which should be added to the commit
     # Defaults to all (.)
-    # See the `pathspec`-documentation for git
-    # - https://git-scm.com/docs/git-add#Documentation/git-add.txt-ltpathspecgt82308203
-    # - https://git-scm.com/docs/gitglossary#Documentation/gitglossary.txt-aiddefpathspecapathspec
     file_pattern: '*.jsx src/*.js tests/*.js'
 
     # Optional. Local file path to the repository.
@@ -28,22 +25,19 @@
     # Optional commit user and author settings
     commit_user_name: MFathinHalim # defaults to "github-actions[bot]"
     commit_user_email: halimfathin7@gmail.com # defaults to "41898282+github-actions[bot]@users.noreply.github.com"
-    commit_author: MFathinHalim <MFathinHalim@github.com> # defaults to "username <numeric_id+username@users.noreply.github.com>", where "numeric_id" and "username" belong to the author of the commit that triggered the run
+    commit_author: MFathinHalim <MFathinHalim@github.com> # defaults to GitHub's noreply email
 
     # Optional. Tag name being created in the local repository and 
     # pushed to remote repository and defined branch.
     tagging_message: 'v1.0.0'
 
-    # Optional. Option used by `git-status` to determine if the repository is 
-    # dirty. See https://git-scm.com/docs/git-status#_options
+    # Optional. Option used by `git-status` to determine if the repository is dirty.
     status_options: '--untracked-files=no'
 
     # Optional. Options used by `git-add`.
-    # See https://git-scm.com/docs/git-add#_options
     add_options: '-u'
 
     # Optional. Options used by `git-push`.
-    # See https://git-scm.com/docs/git-push#_options
     push_options: '--force'
     
     # Optional. Disable dirty check and always try to create a commit and push
@@ -55,8 +49,7 @@
     # Optional. Skip internal call to `git checkout`
     skip_checkout: true
 
-    # Optional. Prevents the shell from expanding filenames. 
-    # Details: https://www.gnu.org/software/bash/manual/html_node/Filename-Expansion.html
+    # Optional. Prevents the shell from expanding filenames.
     disable_globbing: true
 
     # Optional. Create given branch name in local and remote repository.
