--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '0 * * * *'  # Menjalankan setiap jam (opsiona)
+    - cron: '0 * * * *'  # Menjalankan setiap jam (opsional)
 
 jobs:
   auto-commit:
@@ -15,7 +15,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Tambahkan perubahan (Update timestamp di Next.js)
-        run: echo "Last run: $(date)" > public/timestamp.txt
+        run: |
+          echo "Last run: $(date)" > public/timestamp.txt
 
       - name: Cek status sebelum commit
         run: git status
