--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^15.0.7",
     "mongoose": "^8.10.1",
     "next": "15.1.7",
     "react": "^19.0.0",
