--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.7",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.483.0",
     "marked": "^15.0.7",
     "mongoose": "^8.10.1",
     "next": "15.1.7",
