--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.15.1",
     "react-quill-new": "^3.4.2",
+    "sweetalert2": "^11.17.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
